<resources>
    <string name="app_name">EldenBuilds</string>
    <string name="text_level_format">Lvl %1$d</string>
    <string name="text_class_format">Class: %1$s</string>
    <string name="text_weapons_format">R: %1$s / L: %2$s</string>
    <string name="unknown">Unknown</string>
    <string name="empty_slot">-</string>
    <string name="add_build">Add Build</string>
    <string name="hint_build_name">Nome da Build</string>
    <string name="hint_class">Classe</string>
    <string name="hint_level">Nível</string>
    <string name="title_stats">Atributos</string>
    <string name="btn_save_build">Salvar Build</string>

    <string name="class_vagabond">Vagabond</string>

    <string name="stat_vigor">Vigor</string>
    <string name="stat_mind">Mente</string>
    <string name="stat_endurance">Tenacidade</string>
    <string name="stat_strength">Força</string>
    <string name="stat_dexterity">Destreza</string>
    <string name="stat_intelligence">Inteligência</string>
    <string name="stat_faith">Fé</string>
    <string name="stat_arcane">Arcano</string>
    <string name="section_equipment">Equipamento</string>
    <string name="hint_right_hand">Mão Direita</string>
    <string name="hint_left_hand">Mão Esquerda</string>

    <string name="section_armor">Armadura</string>
    <string name="hint_helm">Capacete</string>
    <string name="hint_chest">Peitoral</string>
    <string name="hint_hands">Luvas</string>
    <string name="hint_legs">Botas</string>

    <string name="section_talismans">Talismãs</string>
    <string name="hint_talisman_1">Talismã 1</string>
    <string name="hint_talisman_2">Talismã 2</string>
    <string name="hint_talisman_3">Talismã 3</string>
    <string name="hint_talisman_4">Talismã 4</string>

    <string name="hint_notes">Notas / Estratégia</string>

    <string name="title_build_details">Detalhes da Build</string>

    <string name="format_class_detail">Classe: %1$s</string>
    <string name="format_level_detail">Nível %1$d</string>
    <string name="format_stat_detail">%1$s: %2$d</string>
    <string name="format_weapons_detail">Armas: %1$s (R) / %2$s (L)</string>
    <string name="format_armor_detail">Armadura: %1$s, %2$s, %3$s, %4$s</string>
    <string name="format_talismans_detail">Talismãs: %1$s, %2$s, %3$s, %4$s</string>

    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Deletar</string>
    <string name="dialog_delete_title">Deletar Build?</string>
    <string name="dialog_delete_message">Tem certeza que deseja apagar esta build? Esta ação não pode ser desfeita.</string>
    <string name="action_yes">Sim, Apagar</string>
    <string name="action_no">Cancelar</string>
    <string name="title_edit_build">Editar Build</string>
    <string name="error_invalid_build_payload">Dados da build invalidos.</string>
    <string name="toast_build_saved">Build salva com sucesso!</string>
    <string name="toast_build_not_saved">Build nao salva.</string>
    <string name="error_no_google_credential">Nenhuma conta Google disponivel para login.</string>
    <string name="error_google_prompt_failed">Falha ao abrir login Google.</string>
    <string name="error_google_credential_type">Tipo de credencial Google invalido.</string>
    <string name="error_firebase_auth_failed">Falha na autenticacao do Firebase.</string>
    <string name="error_name_required">Nome obrigatorio.</string>
    <string name="toast_build_updated">Build atualizada com sucesso!</string>
    <string name="toast_build_deleted">Build deletada.</string>
    <string name="action_sign_in_google">Entrar com o Google</string>
</resources>
